# Studocu_poc

./: .gitignore  README.md  generate_events.py  main.py  pyproject.toml  requirements.txt
airflow/dags/: studocu_daily_pipeline.py
emr/: emr_cluster_launch.sh  emr_historical_backfill.py
fake_events/: events_20260608.json  events_20260609.json  events_20260610.json
glue/: glue_bronze_to_silver.py
studocu_dbt/: dbt_project.yml
studocu_dbt/models/marts/: daily_event_summary.sql  schema.yml
studocu_dbt/models/staging/: sources.yml  stg_events.sql
